--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Correlation Confusion</title>
+    <link rel="icon" type="image/png" href="/favicon_image.png" />
   </head>
   <body>
     <div id="root"></div>
